Fixed issue for 13041- preview button options in html format and citation format.